# temperature-sensor-server

./: stack.yaml  temperature-sensor-server.cabal
app/: Main.hs
